--- a/iotet-core/pom.xml
+++ b/iotet-core/pom.xml
@@ -89,6 +89,16 @@
     </dependency>
     -->
 
+<dependency>
+    <groupId>com.bloidonia</groupId>
+    <artifactId>mod-jdbc-persistor</artifactId>
+    <version>2.1</version>
+</dependency>
+<dependency>
+    <groupId>io.vertx</groupId>
+    <artifactId>mod-work-queue</artifactId>
+    <version>2.0.0-final</version>
+</dependency>
   </dependencies>
 
   <build>
