--- a/iotet-core/pom.xml
+++ b/iotet-core/pom.xml
@@ -99,6 +99,11 @@
     <artifactId>mod-work-queue</artifactId>
     <version>2.0.0-final</version>
 </dependency>
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>5.1.21</version>
+</dependency>
   </dependencies>
 
   <build>
